WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129515
VisitedLinkStore should be able to invalidate link styles for associated pages
https://bugs.webkit.org/show_bug.cgi?id=129515
Summary
VisitedLinkStore should be able to invalidate link styles for associated pages
Anders Carlsson
Reported
2014-02-28 16:27:23 PST
VisitedLinkStore should be able to invalidate link styles for associated pages
Attachments
Patch
(3.79 KB, patch)
2014-02-28 16:29 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-02-28 16:29:53 PST
Created
attachment 225503
[details]
Patch
Anders Carlsson
Comment 2
2014-02-28 16:34:46 PST
Committed
r164895
: <
http://trac.webkit.org/changeset/164895
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug