VisitedLinkStore should be able to invalidate link styles for associated pages https://bugs.webkit.org/show_bug.cgi?id=129515

Reviewed by Dan Bernstein.

* page/Page.cpp:
(WebCore::Page::Page):
Add the VisitedLinkStore if we have one.

(WebCore::Page::~Page):
Remove the VisitedLinkStore if we have one.

* page/VisitedLinkStore.cpp:
(WebCore::VisitedLinkStore::~VisitedLinkStore):
Assert that we don't have any pages.

(WebCore::VisitedLinkStore::addPage):
Add the page to the set.

(WebCore::VisitedLinkStore::removePage):
Remove the page from the set.

(WebCore::VisitedLinkStore::invalidateStylesForAllLinks):
Traverse all the pages and invalidate the style for all links.

(WebCore::VisitedLinkStore::invalidateStylesForLink):
Traverse all the pages and invalidate the style for a given link.

* page/VisitedLinkStore.h:
Add new members.

Canonical link: https://commits.webkit.org/147577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164895 268f45cc-cd09-0410-ab3c-d52691b4dbfc